--- a/shippable.yml
+++ b/shippable.yml
@@ -4,11 +4,11 @@ rvm:
  #- 1.8.7
  #- 1.9.2
  #- 1.9.3
- - 2.0.0
+  - 2.0.0
  #- 2.1.0
  
 before_script:
- - mkdir -p ./shippable/codecoverage
+  - mkdir -p ./shippable/codecoverage
 
 install: true
 script: cp coverage.csv ./shippable/codecoverage
@@ -16,3 +16,7 @@ script: cp coverage.csv ./shippable/codecoverage
 #after_archive:
  #     - echo $SHIPPABLE_ARCHIVE_DOWNLOAD_URL
 archive: true
+
+notifications:
+  email:
+   - tim@shippable.com
